tests/suite/fail/generated/types/fail_sub_string_i64.ny
fn main() {
    let _ = "a" - 1 //~ ERROR Invalid operation on string
}
